# gemma270m-competition

./: .gitattributes  .gitignore  MERGED_README.md  README.md  environment.yml  lora_for_finetuned_arc.ipynb  pyproject.toml  rag_retrieval_cache_after_routing.pkl  setup.py
cs590_eval/: .gitignore  README.md  download_eval_data.py  eval.py  eval.sh  eval_multimodel.py  eval_rag.py  eval_sc.py  generate.py  model_config.py  pipelines.py  pyproject.toml  router_confusion_hidden.csv  router_confusion_normal.csv  router_verification_hidden.csv  router_verification_normal.csv  rule_based_router.py  score.py  submit.py  verify_router.py
cs590_eval/hidden_data/: hidden_factual_qa_test.jsonl  hidden_instruction_following_test.jsonl  hidden_reasoning_test.jsonl
cs590_eval/outputs(ground_truth_router)/: arc_c_test_google-gemma-3-270m-it_nall_bs512_maxtok512_preds.jsonl  arc_c_test_google-gemma-3-270m-it_nall_bs512_maxtok512_sc10_preds.jsonl  arc_c_test_google-gemma-3-270m-it_nall_bs512_maxtok512_sc20_preds.jsonl  arc_c_test_google-gemma-3-270m-it_nall_bs512_maxtok512_sc2_preds.jsonl  arc_c_test_google-gemma-3-270m-it_nall_bs512_maxtok512_sc5_preds.jsonl  arc_c_test_google-gemma-3-270m_nall_bs512_maxtok512_preds.jsonl  ifeval_test_google-gemma-3-270m-it_nall_bs512_maxtok512_sc10_preds.jsonl  ifeval_test_google-gemma-3-270m_nall_bs512_maxtok512_preds.jsonl
cs590_eval/outputs_multimodel/: arc_c_test_multimodel_nall_bs512_maxtok512_preds.jsonl  ifeval_test_multimodel_nall_bs512_maxtok512_preds.jsonl
cs590_eval/outputs_multimodel_1207_01/: arc_c_test_multimodel_nall_bs512_maxtok512_preds.jsonl  ifeval_test_multimodel_nall_bs512_maxtok512_preds.jsonl
cs590_eval/outputs_multimodel_1208_01/: arc_c_test_multimodel_nall_bs512_maxtok512_preds.jsonl
cs590_eval/outputs_multimodel_1209_01/: arc_c_test_multimodel_n1000_bs512_maxtok512_preds.jsonl  ifeval_test_multimodel_n1000_bs512_maxtok512_preds.jsonl  triviaqa_test_multimodel_n1000_bs512_maxtok512_preds.jsonl
cs590_eval/outputs_multimodel_1212_01/: arc_c_test_multimodel_n1000_bs512_maxtok512_preds.jsonl  ifeval_test_multimodel_n1000_bs512_maxtok512_preds.jsonl  triviaqa_test_multimodel_n1000_bs512_maxtok512_preds.jsonl
cs590_eval/submissions_cached/: arc-c_preds.jsonl  hidden_factual_qa_preds.jsonl  hidden_instruction_following_preds.jsonl  hidden_reasoning_preds.jsonl  ifeval_preds.jsonl  triviaqa_preds.jsonl
cs590_eval/submissions_prev/: hidden_factual_qa_preds.jsonl  hidden_instruction_following_preds.jsonl  hidden_reasoning_preds.jsonl
(+105 files in other folders)
